# garmin-mcp-bridge

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  selftest.py
.github/workflows/: ci.yml
garmin_mcp_bridge/: __init__.py  client.py  server.py
scripts/: install.ps1  install.sh
tests/: conftest.py  test_client.py  test_streams.py  test_workout_doc.py
